[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/walk1.png" type="Texture" id=1]
[ext_resource path="res://assets/fly1.png" type="Texture" id=2]
[ext_resource path="res://assets/walk4.png" type="Texture" id=3]
[ext_resource path="res://assets/fly4.png" type="Texture" id=4]
[ext_resource path="res://assets/fly5.png" type="Texture" id=5]
[ext_resource path="res://assets/walk6.png" type="Texture" id=6]
[ext_resource path="res://assets/fly2.png" type="Texture" id=7]
[ext_resource path="res://assets/walk3.png" type="Texture" id=8]
[ext_resource path="res://assets/walk5.png" type="Texture" id=9]
[ext_resource path="res://assets/fly3.png" type="Texture" id=10]
[ext_resource path="res://mumei.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 33 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "air",
"speed": 15.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[node name="mumei" type="KinematicBody2D"]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -1 )
shape = SubResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -3, -7 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 2 )
animation = "air"
frame = 4
playing = true

[node name="BumpTimer" type="Timer" parent="."]
wait_time = 0.501

[node name="CaffeineTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="BumpTimer" to="." method="_on_BumpTimer_timeout"]
[connection signal="timeout" from="CaffeineTimer" to="." method="_on_CaffeineTimer_timeout"]
